--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                 <p class="member-position">Research and Analysis</p>
                 <div class="links">
                     <a href="https://www.linkedin.com/in/avnee-dadhich-4974752ba?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" class="icon" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
-                    <a href="" class="icon" target="_blank"><i class="fa-brands fa-instagram"></i></a>
+                    <a href="https://www.instagram.com/avnee.eic.mbm?igsh=Y21qdHoxNHV0b28x" class="icon" target="_blank"><i class="fa-brands fa-instagram"></i></a>
                 </div>
             </div>            
             <div class="member">
@@ -169,7 +169,7 @@
                 <p class="member-position">Graphics</p>
                 <div class="links">
                     <a href="https://www.linkedin.com/in/anushree-shekhawat-5b4265290?trk=contact-info" class="icon" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
-                    <a href="" class="icon" target="_blank"><i class="fa-brands fa-instagram"></i></a>
+                    <a href="https://www.instagram.com/anushree.eic.mbmu?igsh=MTlqOXVvamJjb3AxeA==" class="icon" target="_blank"><i class="fa-brands fa-instagram"></i></a>
                 </div>
             </div>            
             <div class="member">
@@ -177,8 +177,8 @@
                 <p class="member-name">Pankaj Chouhan</p>
                 <p class="member-position">Graphics</p>
                 <div class="links">
-                    <a href="" class="icon" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
-                    <a href="" class="icon" target="_blank"><i class="fa-brands fa-instagram"></i></a>
+                    <a href="https://www.linkedin.com/in/pankaj-chouhan-8190512b0?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" class="icon" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
+                    <a href="https://www.instagram.com/punk.ajjj/" class="icon" target="_blank"><i class="fa-brands fa-instagram"></i></a>
                 </div>
             </div>            
             <div class="member">
